--- a/DDAYGO/ViewController/My/Setting/BindingEmail/BindingEmailController.xib
+++ b/DDAYGO/ViewController/My/Setting/BindingEmail/BindingEmailController.xib
@@ -15,7 +15,6 @@
                 <outlet property="BindingEmailscrollView" destination="53e-o4-U5F" id="WQI-qC-i4F"/>
                 <outlet property="ZPCodeTextField" destination="RxJ-IJ-izv" id="V8c-VB-Die"/>
                 <outlet property="ZPEmailTextFiled" destination="HDt-RL-ZCR" id="Exl-am-cIH"/>
-                <outlet property="ZPPswTextField" destination="Twd-vG-oou" id="X5e-xM-col"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -28,7 +27,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HDt-RL-ZCR" customClass="TextView">
-                            <rect key="frame" x="20" y="40" width="280" height="35"/>
+                            <rect key="frame" x="20" y="90" width="280" height="35"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="ccz-mI-Yxy"/>
@@ -40,7 +39,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RxJ-IJ-izv" customClass="TextView">
-                            <rect key="frame" x="20" y="90" width="280" height="35"/>
+                            <rect key="frame" x="20" y="140" width="280" height="35"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="VQ9-Ml-I2O"/>
@@ -52,20 +51,8 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Twd-vG-oou" customClass="TextView">
-                            <rect key="frame" x="20" y="140" width="280" height="35"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="35" id="7bP-ae-E1w"/>
-                            </constraints>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="string" keyPath="titleStr" value="请输入密码"/>
-                                <userDefinedRuntimeAttribute type="boolean" keyPath="showBtn" value="YES"/>
-                                <userDefinedRuntimeAttribute type="boolean" keyPath="secureTextEntry" value="YES"/>
-                            </userDefinedRuntimeAttributes>
-                        </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hTS-Jd-kvu">
-                            <rect key="frame" x="20" y="229" width="280" height="45"/>
+                            <rect key="frame" x="20" y="279" width="280" height="45"/>
                             <color key="backgroundColor" red="1" green="0.49803921569999998" blue="0.0" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="45" id="AM9-Au-Sxy"/>
@@ -85,17 +72,14 @@
                     </subviews>
                     <constraints>
                         <constraint firstItem="HDt-RL-ZCR" firstAttribute="trailing" secondItem="RxJ-IJ-izv" secondAttribute="trailing" id="6u7-PH-Jiv"/>
-                        <constraint firstItem="RxJ-IJ-izv" firstAttribute="trailing" secondItem="Twd-vG-oou" secondAttribute="trailing" id="Cb2-Dd-dyF"/>
-                        <constraint firstItem="Twd-vG-oou" firstAttribute="trailing" secondItem="hTS-Jd-kvu" secondAttribute="trailing" id="FH2-22-Ebc"/>
-                        <constraint firstItem="HDt-RL-ZCR" firstAttribute="top" secondItem="53e-o4-U5F" secondAttribute="top" constant="40" id="Hi2-fU-rL3"/>
+                        <constraint firstItem="hTS-Jd-kvu" firstAttribute="top" secondItem="53e-o4-U5F" secondAttribute="top" constant="279" id="7kg-vl-M9U"/>
+                        <constraint firstItem="HDt-RL-ZCR" firstAttribute="top" secondItem="53e-o4-U5F" secondAttribute="top" constant="90" id="Hi2-fU-rL3"/>
                         <constraint firstAttribute="trailing" secondItem="HDt-RL-ZCR" secondAttribute="trailing" constant="20" id="Kf6-BY-obe"/>
-                        <constraint firstAttribute="bottom" secondItem="hTS-Jd-kvu" secondAttribute="bottom" constant="294" id="MNq-46-7A2"/>
-                        <constraint firstItem="hTS-Jd-kvu" firstAttribute="top" secondItem="Twd-vG-oou" secondAttribute="bottom" constant="54" id="QVi-Kt-HVL"/>
-                        <constraint firstItem="Twd-vG-oou" firstAttribute="top" secondItem="RxJ-IJ-izv" secondAttribute="bottom" constant="15" id="RCh-ja-0cn"/>
-                        <constraint firstItem="RxJ-IJ-izv" firstAttribute="leading" secondItem="Twd-vG-oou" secondAttribute="leading" id="bgo-mp-7ls"/>
+                        <constraint firstAttribute="bottom" secondItem="hTS-Jd-kvu" secondAttribute="bottom" constant="488" id="MNq-46-7A2"/>
+                        <constraint firstItem="hTS-Jd-kvu" firstAttribute="leading" secondItem="RxJ-IJ-izv" secondAttribute="leading" id="QSy-Ur-eHE"/>
                         <constraint firstItem="HDt-RL-ZCR" firstAttribute="centerX" secondItem="53e-o4-U5F" secondAttribute="centerX" id="ce1-3y-DpS"/>
                         <constraint firstItem="HDt-RL-ZCR" firstAttribute="leading" secondItem="53e-o4-U5F" secondAttribute="leading" constant="20" id="hKx-Ft-3vu"/>
-                        <constraint firstItem="Twd-vG-oou" firstAttribute="leading" secondItem="hTS-Jd-kvu" secondAttribute="leading" id="mbA-LK-yuL"/>
+                        <constraint firstItem="hTS-Jd-kvu" firstAttribute="trailing" secondItem="RxJ-IJ-izv" secondAttribute="trailing" id="oP3-Gd-vNa"/>
                         <constraint firstItem="RxJ-IJ-izv" firstAttribute="top" secondItem="HDt-RL-ZCR" secondAttribute="bottom" constant="15" id="qww-iV-Ndi"/>
                         <constraint firstItem="HDt-RL-ZCR" firstAttribute="leading" secondItem="RxJ-IJ-izv" secondAttribute="leading" id="tuF-CL-hZK"/>
                     </constraints>
