--- a/DDAYGO/ViewController/My/Setting/SetHomePage/Base.lproj/SettingViewController.xib
+++ b/DDAYGO/ViewController/My/Setting/SetHomePage/Base.lproj/SettingViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -26,6 +26,8 @@
                 <outlet property="headerImage" destination="VSQ-p6-o0u" id="GiR-qy-ri1"/>
                 <outlet property="nicknameLabel" destination="zHZ-mp-Ts3" id="eqz-E9-ftF"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view1" destination="j59-5c-d7A" id="FyV-hq-Gdb"/>
+                <outlet property="view3" destination="3LT-aI-Ujf" id="bIk-nn-20g"/>
                 <outlet property="view3Layout" destination="9Cc-c5-D7w" id="AZy-xu-vrA"/>
             </connections>
         </placeholder>
