新增启动图，完成首页8个按钮，以及一些BUg处理
新增启动图，完成首页8个按钮，以及一些BUg处理

--- a/DDAYGO/ViewController/My/Setting/BindingICUE/BindingICUEViewController.xib
+++ b/DDAYGO/ViewController/My/Setting/BindingICUE/BindingICUEViewController.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BindingICUEViewController">
             <connections>
-                <outlet property="AccountnumbertextField" destination="oCK-0y-ito" id="6Ix-JP-acH"/>
+                <outlet property="AccountnumbertextField" destination="oCK-0y-ito" id="Xdw-o8-bwk"/>
                 <outlet property="BindingICUEscrollView" destination="MIm-ar-Srq" id="j4u-rf-wXY"/>
                 <outlet property="PassWordtextField" destination="S1L-wQ-aLr" id="NlI-BF-JUI"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
